更新FLOW逻辑