@@ -1,12 +1,11 @@
 package com.aihuishou.payflow.engine;
 
+import com.aihuishou.payflow.action.ConditionAction;
 import com.aihuishou.payflow.action.NodeAction;
-import com.aihuishou.payflow.action.NodeConditionAction;
 import com.aihuishou.payflow.algorithm.RetryAlgorithm;
 import com.aihuishou.payflow.engine.FlowParam.Runner;
 import com.aihuishou.payflow.handler.FlowHandler;
-import com.aihuishou.payflow.handler.NodePostHandler;
-import com.aihuishou.payflow.handler.NodePreHandler;
+import com.aihuishou.payflow.handler.NodeHandler;
 import com.aihuishou.payflow.model.param.Flow;
 import com.aihuishou.payflow.model.param.FlowNode;
 import com.aihuishou.payflow.model.param.NodeCondition;
@@ -24,13 +23,15 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.Executor;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class FlowContext {
+public class FlowManager {
 
     private final FlowParam flowParam;
     private final FlowParser flowParser;
@@ -40,13 +41,10 @@ public class FlowContext {
     private static Executor defaultExecutor;
     private static Map<String, Flow> flowMap;
     private static Map<String, FlowNode> flowNodeMap;
-
     @Getter
-    private static List<NodePreHandler> nodePreHandlers;
+    private static List<NodeHandler> nodeHandlers = new ArrayList<>();
     @Getter
-    private static List<NodePostHandler> nodePostHandlers;
-    @Getter
-    private static List<FlowHandler> flowHandlers;
+    private static List<FlowHandler> flowHandlers = new ArrayList<>();
 
     /**
      * 加载 FLow
@@ -68,6 +66,11 @@ public class FlowContext {
         flowMap = new HashMap<>();
         flowNodeMap = new HashMap<>();
         for (Flow flow : flowParam.getFlows()) {
+            final String flowId = flow.getId();
+            if (flowMap.containsKey(flowId)) {
+                throw new IllegalStateException("配置了重复的流程，重复的流程：" + flowId);
+            }
+            flowMap.put(flowId, flow);
             //nodeMap 用于存储NodeId 和 node 的映射关系
             Map<String, FlowNode> nodeMap = new HashMap<>();
             Set<NodeCondition> nodeConditions = new HashSet<>();
@@ -76,21 +79,34 @@ public class FlowContext {
                     //赋值流程的开始节点
                     flow.setStartNode(flowNode);
                 }
+                //需要判断 node Ide不能重复
                 nodeMap.put(flowNode.getId(), flowNode);
-                flowNodeMap.put(flow.getName() + "_" + flowNode.getId(), flowNode);
+                if (flowNodeMap.containsKey(flowId + "_" + flowNode.getId())) {
+                    throw new IllegalStateException(
+                        String.format("当前流程存在重复的节点，流程名称：%s,节点名称:%s", flowId, flowNode.getId()));
+                }
+                flowNodeMap.put(flowId + "_" + flowNode.getId(), flowNode);
                 //赋值每个流程需要做的事
                 flowNode.setNodeAction(flowParser.parse(flowNode.getCreateExp(), NodeAction.class));
                 if (StringUtils.isNotEmpty(flowNode.getRetryAlgorithmExp())) {
                     flowNode.setRetryAlgorithm(flowParser.parse(flowNode.getRetryAlgorithmExp(), RetryAlgorithm.class));
                 }
-                flowNode.setFlowName(flow.getName());
+                flowNode.setFlowId(flowId);
                 if (flowNode.getConditions() != null) {
                     for (NodeCondition nodeCondition : flowNode.getConditions()) {
-                        Optional.of(nodeCondition).map(NodeCondition::getNodeWhens)
+                        Optional.of(nodeCondition).map(NodeCondition::getWhenNodes)
                             .ifPresent(nodeWhens -> Arrays.stream(nodeWhens).forEach(
                                 //赋值流程运行的条件
-                                nodeWhen -> nodeWhen.setConditionAction(
-                                    flowParser.parse(nodeWhen.getCreateExp(), NodeConditionAction.class))
+                                nodeWhen -> {
+                                    if (StringUtils.isNotEmpty(nodeWhen.getCreateExp())) {
+                                        nodeWhen.setConditionAction(
+                                            flowParser.parse(nodeWhen.getCreateExp(), ConditionAction.class));
+                                    }
+                                    if (StringUtils.isNotEmpty(nodeWhen.getSimpleExp())) {
+                                        nodeWhen.setSimpleExpression(
+                                            flowParser.parseExpression(nodeWhen.getSimpleExp()));
+                                    }
+                                }
                             ));
                         nodeConditions.add(nodeCondition);
                     }
@@ -103,24 +119,29 @@ public class FlowContext {
                 }
                 nodeCondition.setToFlowNodes(flowNodes);
             }
-            flowMap.put(flow.getName(), flow);
+
         }
     }
 
 
     private void initHandler() {
-        Map<String, NodePreHandler> actionPreHandlerMap = applicationContext.getBeansOfType(NodePreHandler.class);
-        nodePreHandlers = actionPreHandlerMap.values().stream().toList();
 
-        Map<String, NodePostHandler> actionPostHandlerMap = applicationContext.getBeansOfType(NodePostHandler.class);
-        nodePostHandlers = actionPostHandlerMap.values().stream().toList();
-
-        Map<String, FlowHandler> flowHandlerMap = applicationContext.getBeansOfType(FlowHandler.class);
-        flowHandlers = flowHandlerMap.values().stream().toList();
+        if (Objects.nonNull(flowParam.getNodeHandlers())) {
+            nodeHandlers = Arrays.stream(flowParam.getNodeHandlers())
+                .map(handler -> flowParser.parse(handler.getCreateExp(), NodeHandler.class))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+        }
+        if (Objects.nonNull(flowParam.getNodeHandlers())) {
+            flowHandlers = Arrays.stream(flowParam.getFlowHandlers())
+                .map(handler -> flowParser.parse(handler.getCreateExp(), FlowHandler.class))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+        }
     }
 
-    public static Flow getFlow(String flowName) {
-        return flowMap.get(flowName);
+    public static Flow getFlow(String flowId) {
+        return flowMap.get(flowId);
     }
 
     public static FlowNode getFlowNode(String key) {
